err/cpenv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cpenv'...
Listing './lib/python3.5/site-packages/cpenv/bin'...
Listing './lib/python3.5/site-packages/cpenv/packages'...
Listing './lib/python3.5/site-packages/cpenv/packages/click'...
Listing './lib/python3.5/site-packages/cpenv/packages/colorama'...
Listing './lib/python3.5/site-packages/cpenv/packages/yaml'...
Compiling './lib/python3.5/site-packages/cpenv/packages/yaml/constructor.py'...
***   File "./lib/python3.5/site-packages/cpenv/packages/yaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cpenv/packages/yaml/reader.py'...
***   File "./lib/python3.5/site-packages/cpenv/packages/yaml/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cpenv/packages/yaml/resolver.py'...
***   File "./lib/python3.5/site-packages/cpenv/packages/yaml/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cpenv/packages/yaml/scanner.py'...
***   File "./lib/python3.5/site-packages/cpenv/packages/yaml/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cpenv-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
